<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">


    <TextView
        android:textColor="@color/colorText"
        android:id="@+id/sun_sunrise_your_place"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sun_sunrise"
        app:layout_constraintBottom_toTopOf="@+id/sun_sunset_your_place"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView

        android:textColor="@color/colorText"
        android:id="@+id/sun_sunset_your_place"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sun_sunset"
        app:layout_constraintBottom_toTopOf="@+id/sun_solar_noon_your_place"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:textColor="@color/colorText"
        android:id="@+id/sun_solar_noon_your_place"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sun_solar_noon"
        app:layout_constraintBottom_toTopOf="@+id/sun_day_length_your_place"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:textColor="@color/colorText"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="8dp"
        android:text="@string/sun_day_length"
        android:id="@+id/sun_day_length_your_place"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/show_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/refresh_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>